Compatibility
===============================================================================

* Deprecated methods

Deprecated methods that were initially targeted to be removed in TYPO3 4.8/6.0
have finally been removed. The deprecation log shows which functions were
declared to be deprecated and will be removed in the next TYPO3 versions.

Removed Functionality
-------------------------------------------------------------------------------

* Removed doNotLoadInFE flag

With TYPO3 4.3 the flag doNotLoadInFE flag was introduced in ext_emconf.php
extension files to hint the core that an extension has no frontend
functionality. The performance gain of this change in the frontend was minimal.
The flag is now removed and the according extList_FE setting in localconf.php
has no effect anymore.

===============================================================================
Changes and Improvements
===============================================================================

This will list all changes and improvements between TYPO3 4.7 and 6.0. For
technical details see ChangeLog included in the typo3_src package.

-------------------------------------------------------------------------------
General
-------------------------------------------------------------------------------

* Extbase and fluid always loaded

The core extensions 'extbase' and 'fluid' are used in core classes like t3lib
and in several important core extensions. Extbase and fluid are now required
extensions and always loaded.

Other General Improvements
-------------------------------------------------------------------------------

...

-------------------------------------------------------------------------------
Security
-------------------------------------------------------------------------------

...

-------------------------------------------------------------------------------
Backend
-------------------------------------------------------------------------------

...

htmlArea RTE